--- a/app/src/main/res/layout/information_person.xml
+++ b/app/src/main/res/layout/information_person.xml
@@ -39,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginTop="10dp"
-                app:srcCompat="@drawable/user" />
+                app:srcCompat="@drawable/users" />
 
             <TextView
                 android:layout_width="match_parent"
