--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -34,7 +34,7 @@
                 android:layout_height="100dp"
                 android:layout_gravity="left"
                 android:layout_marginTop="10dp"
-                app:srcCompat="@drawable/users" />
+                app:srcCompat="@drawable/user" />
 
             <LinearLayout
                 android:layout_width="match_parent"
