--- a/app/src/main/res/layout/information_place.xml
+++ b/app/src/main/res/layout/information_place.xml
@@ -124,6 +124,7 @@
                     android:id="@+id/plinfoTab_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
                     android:paddingLeft="10sp"
                     android:textSize="20dp" />
 
