--- a/app/src/main/res/layout/information_person.xml
+++ b/app/src/main/res/layout/information_person.xml
@@ -181,14 +181,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
+                android:background="#DF1B1B"
                 android:gravity="center"
                 android:orientation="horizontal">
 
 
                 <TextView
+                    android:id="@+id/pinfoTab_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/pinfoTab_content"
+                    android:hapticFeedbackEnabled="false"
                     android:textSize="13dp" />
             </LinearLayout>
 
