--- a/app/src/main/res/layout/row_main.xml
+++ b/app/src/main/res/layout/row_main.xml
@@ -9,6 +9,7 @@
 
     <ImageView
         android:id="@+id/home_Img"
+        android:clipToPadding="true"
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:layout_gravity="center_horizontal"
