--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="darkGray">#525252</color>
     <color name="lightGray">#E8E6E6</color>
     <color name="white">#FFFFFF</color>
+    <color name="icons">#FFFFFF</color>
 </resources>
