--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="corner_radius">8dp</dimen>
+    <dimen name="dot_dec">80dp</dimen>
+    <dimen name="profile_corner_radius">@dimen/dot</dimen>
+    <dimen name="dot">8dp</dimen>
 </resources>
