--- a/app/src/main/res/layout/fragment_activity.xml
+++ b/app/src/main/res/layout/fragment_activity.xml
@@ -52,26 +52,44 @@
     </LinearLayout>
 
 
-    <Button
-        android:id="@+id/AwriteButton"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginLeft="15dp"
-        android:background="@drawable/back_corner_circle"
-        android:backgroundTint="@color/lightGray"
-        android:text="새글 작성" />
+        android:layout_marginBottom="13dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="15dp"
-        android:text="지금 뜨는 액티비티"
-        android:textSize="23dp"
-        android:textStyle="bold" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:text="지금 뜨는 액티비티"
+            android:textColor="#000000"
+            android:textSize="23dp"
+            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:gravity="right">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back_corner_circle"
+                android:layout_marginRight="15dp"
+                android:layout_gravity="center">
+                <TextView
+                    android:id="@+id/AwriteButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="6dp"
+                    android:text="새글 작성" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <RadioGroup
         android:id="@+id/ac_radioGroup"
@@ -84,28 +102,31 @@
             android:id="@+id/ac_radio_lecture"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="    강연회    "
+            android:text="     강연회     "
             android:background="@drawable/radio_button_selector"
             android:textColor="#252525"
             android:button="@android:color/transparent"
+            android:textStyle="bold"
             android:textSize="15dp" />
 
         <RadioButton
             android:id="@+id/ac_radio_project"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="    프로젝트    "
+            android:text="     프로젝트     "
             android:textColor="#252525"
             android:button="@android:color/transparent"
             android:background="@drawable/radio_button_selector"
+            android:textStyle="bold"
             android:textSize="15dp"/>
 
         <RadioButton
             android:id="@+id/ac_radio_conference"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="    컨퍼런스    "
+            android:text="     컨퍼런스     "
             android:textColor="#252525"
+            android:textStyle="bold"
             android:button="@android:color/transparent"
             android:background="@drawable/radio_button_selector"
             android:textSize="15dp"/>
@@ -114,7 +135,8 @@
             android:id="@+id/ac_radio_study"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="    스터디    "
+            android:text="     스터디     "
+            android:textStyle="bold"
             android:button="@android:color/transparent"
             android:background="@drawable/radio_button_selector"
             android:textSize="15dp"/>
@@ -123,8 +145,9 @@
             android:id="@+id/ac_radio_etc"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="    기타    "
+            android:text="     기타     "
             android:textColor="#252525"
+            android:textStyle="bold"
             android:button="@android:color/transparent"
             android:background="@drawable/radio_button_selector"
             android:textSize="15dp"
