--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -52,6 +52,7 @@
                 android:layout_marginBottom="15dp"
                 android:text="스페이스 For U"
                 android:textSize="23dp"
+                android:textColor="#000000"
                 android:textStyle="bold" />
 
             <TextView
@@ -79,6 +80,7 @@
                 android:layout_marginBottom="15dp"
                 android:text="노마더 For U"
                 android:textSize="23dp"
+                android:textColor="#000000"
                 android:textStyle="bold" />
 
             <TextView
@@ -106,6 +108,7 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginBottom="15dp"
                 android:text="액티비티 For U"
+                android:textColor="#000000"
                 android:textSize="23dp"
                 android:textStyle="bold" />
 
