--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -18,6 +18,7 @@
             android:layout_marginTop="15dp"
             android:gravity="center"
             android:text="프로필"
+            android:textColor="#000000"
             android:textSize="17dp" />
 
 
@@ -49,7 +50,7 @@
                     android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:text="박재민"
-                    android:textColor="@color/darkGray"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
 
                 <LinearLayout
@@ -68,6 +69,7 @@
                             android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:gravity="center"
+                            android:textColor="#000000"
                             android:textSize="16dp" />
 
                         <TextView
@@ -75,6 +77,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="팔로워"
+                            android:textColor="#000000"
                             android:textSize="13dp" />
 
                     </LinearLayout>
@@ -97,6 +100,7 @@
                             android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:gravity="center"
+                            android:textColor="#000000"
                             android:textSize="16dp" />
 
                         <TextView
@@ -104,6 +108,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="팔로잉"
+                            android:textColor="#000000"
                             android:textSize="13dp" />
 
                     </LinearLayout>
@@ -146,6 +151,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="작성글"
+                    android:textColor="#000000"
                     android:textSize="13dp" />
 
             </LinearLayout>
@@ -171,6 +177,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="스크랩"
+                    android:textColor="#000000"
                     android:textSize="13dp" />
             </LinearLayout>
 
@@ -208,7 +215,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_margin="3dp"
+        android:layout_marginTop="3dp"
         android:background="#878686" />
 
     <LinearLayout
@@ -242,7 +249,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_margin="3dp"
+        android:layout_marginTop="3dp"
         android:background="#878686" />
 
     <LinearLayout
@@ -275,7 +282,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_margin="3dp"
+        android:layout_marginTop="3dp"
         android:background="#878686" />
 
     <LinearLayout
@@ -308,7 +315,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_margin="3dp"
+        android:layout_marginTop="3dp"
         android:background="#878686" />
 
     <LinearLayout
