--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,30 +53,42 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="13dp"
         android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="15dp"
-        android:text="지금 뜨는 곳"
-        android:textSize="23dp"
-        android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/plWriteButton"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:text="지금 뜨는 곳"
+            android:textSize="23dp"
+            android:textColor="#000000"
+            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginLeft="170dp"
-            android:background="@drawable/back_border_corner_round"
-            android:backgroundTint="@color/white"
-            android:text="새글 작성" />
+            android:gravity="right">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back_corner_circle"
+                android:layout_marginRight="15dp"
+                android:layout_gravity="center">
+                <TextView
+                    android:id="@+id/plWriteButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                   android:layout_margin="6dp"
+                    android:text="새글 작성" />
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
+
     <RadioGroup
         android:id="@+id/pl_radioGroup"
         android:layout_width="match_parent"
@@ -88,54 +100,57 @@
             android:id="@+id/pl_radio_shareOffice"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="    공유오피스    "
             android:background="@drawable/radio_button_selector"
-            android:textColor="#252525"
             android:button="@android:color/transparent"
+            android:text="    공유오피스    "
+            android:textColor="#252525"
+            android:textStyle="bold"
             android:textSize="15dp" />
 
         <RadioButton
             android:id="@+id/pl_radio_personalOffice"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
+            android:background="@drawable/radio_button_selector"
+            android:button="@android:color/transparent"
             android:text="    개인오피스    "
             android:textColor="#252525"
-            android:button="@android:color/transparent"
-            android:background="@drawable/radio_button_selector"
-            android:textSize="15dp"/>
+            android:textStyle="bold"
+            android:textSize="15dp" />
 
         <RadioButton
             android:id="@+id/pl_radio_studyRoom"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
+            android:background="@drawable/radio_button_selector"
+            android:button="@android:color/transparent"
             android:text="    스터디룸    "
             android:textColor="#252525"
-            android:button="@android:color/transparent"
-            android:background="@drawable/radio_button_selector"
-            android:textSize="15dp"/>
+            android:textStyle="bold"
+            android:textSize="15dp" />
 
         <RadioButton
             android:id="@+id/pl_radio_cafe"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="    카페    "
-            android:button="@android:color/transparent"
             android:background="@drawable/radio_button_selector"
-            android:textSize="15dp"/>
+            android:button="@android:color/transparent"
+            android:text="    카페    "
+            android:textStyle="bold"
+            android:textSize="15dp" />
 
         <RadioButton
             android:id="@+id/pl_radio_etc"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="    기타    "
-            android:textColor="#252525"
-            android:button="@android:color/transparent"
             android:background="@drawable/radio_button_selector"
-            android:textSize="15dp"
-            />
+            android:button="@android:color/transparent"
+            android:text="    기타    "
+            android:textStyle="bold"
+            android:textColor="#252525"
+            android:textSize="15dp" />
 
     </RadioGroup>
-
 
 
     <androidx.recyclerview.widget.RecyclerView
