--- a/app/src/main/res/layout/information_person.xml
+++ b/app/src/main/res/layout/information_person.xml
@@ -25,7 +25,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="15dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,6 +49,9 @@
                 android:layout_margin="5dp"
                 android:gravity="center"
                 android:id="@+id/pinfoTab_name"
+                android:text="박재민"
+                android:textStyle="bold"
+                android:textColor="#000000"
                 android:textSize="20dp" />
 
             <TextView
@@ -54,6 +59,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:id="@+id/pinfoTab_work"
+                android:text="웅앵 대표"
+                android:textColor="#000000"
                 android:textSize="12dp" />
 
             <LinearLayout
@@ -101,16 +108,19 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:layout_width="80dp"
+                        android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:id="@+id/pinfoTab_follower"
+                        android:textColor="#000000"
+                        android:text="144"
                         android:textSize="18dp" />
 
                     <TextView
-                        android:layout_width="80dp"
+                        android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:textColor="#000000"
                         android:text="팔로워" />
 
                 </LinearLayout>
@@ -124,22 +134,24 @@
                     android:background="@color/lightGray" />
 
                 <LinearLayout
-                    android:layout_width="80dp"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/pinfoTab_following"
-                        android:layout_width="80dp"
+                        android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="24"
+                        android:textColor="#000000"
                         android:textSize="18dp" />
 
                     <TextView
-                        android:layout_width="80dp"
+                        android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:textColor="#000000"
                         android:text="팔로잉" />
 
                 </LinearLayout>
@@ -174,23 +186,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/pinfoTab_subject"
+                    android:text="경력사항"
+                    android:textColor="#000000"
                     android:textSize="13dp" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/pinfoTab_content"
-                    android:textSize="13dp" />
-            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/pinfoTab_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:textSize="13dp" />
 
 
         </LinearLayout>
