--- a/app/src/main/res/layout/row_main.xml
+++ b/app/src/main/res/layout/row_main.xml
@@ -25,6 +25,8 @@
         android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal"
         android:text="코워킹스페이스를 재해석한 f공간"
+        android:textColor="#000000"
+        android:textStyle="bold"
         android:textSize="15dp"/>
 
 </LinearLayout>
