--- a/app/src/main/res/layout/information_activity.xml
+++ b/app/src/main/res/layout/information_activity.xml
@@ -44,11 +44,11 @@
             android:orientation="vertical">
 
             <ImageView
+                app:srcCompat="@drawable/place_img"
                 android:id="@+id/ainfoTab_activityimg"
                 android:layout_width="411dp"
                 android:layout_height="300dp"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginRight="15dp"
                 android:scaleType="fitXY" />
 
