--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -3,90 +3,200 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="15dp"
     android:background="@color/white"
-    android:gravity="left"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/back_bottomline"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/activity_submitBtn"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="submit" />
+            android:layout_weight="1">
 
-        <Button
-            android:id="@+id/picBtn"
-            android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/activity_backbtn"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/ic_back" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="insert image" />
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="글 쓰기"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="8dp"
+                android:textColor="#000000"
+                android:textSize="18dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="4dp"
+                android:background="@drawable/back_border_corner_round">
+
+                <TextView
+                    android:id="@+id/activity_submitBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="6dp"
+                    android:text="SUBMIT"
+                    android:textColor="@color/pink"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </LinearLayout>
+
+
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="작성자 :  "
-            android:textSize="20dp" />
-        <!--
-        <TextView
-            android:id="@+id/activity_userId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="myidissubin"
-            android:textSize="20dp" />
--->
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/activity_participate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="컨셉을 입력하세요 " />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/activity_field"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="분야를 입력하세요 " />
+                <EditText
+                    android:id="@+id/activity_subject"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_weight="10"
+                    android:textSize="23dp"
+                    android:textStyle="bold"
+                    android:hint="제목" />
 
-    <EditText
-        android:id="@+id/activity_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="유형을 입력하세요 " />
+                <Button
+                    android:id="@+id/picBtn"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/picture_2"/>
+            </LinearLayout>
 
-    <EditText
-        android:id="@+id/activity_subject"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="제목을 입력하세요 " />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/spinner">
 
-    <EditText
-        android:id="@+id/activity_maxPeopleNum"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="최대인원을 입력하세요 " />
+                    <Spinner
+                        android:id="@+id/activity_field"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/pink"
+                        android:spinnerMode="dropdown"
+                        android:entries="@array/a_searchFieldOption"/>
+                </RelativeLayout>
 
-    <EditText
-        android:id="@+id/activity_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="내용을 입력하세요 " />
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/spinner"
+                    android:gravity="center">
 
-    <ImageView
-        android:id="@+id/picView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/back_none" />
+                    <Spinner
+                        android:id="@+id/activity_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/pink"
+                        android:spinnerMode="dropdown"
+                        android:entries="@array/a_searchTypeOption"/>
+                </RelativeLayout>
 
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="40dp"
 
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="5dp"
+                    android:gravity="center"
+                    android:background="@drawable/spinner">
+
+                    <Spinner
+                        android:id="@+id/activity_object"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:backgroundTint="@color/pink"
+                        android:entries="@array/a_searchTargetOption"
+                        android:spinnerMode="dropdown" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/activity_maxPeopleNum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="10"
+                android:hint="최대 인원" />
+
+            <EditText
+                android:id="@+id/activity_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:hint="여기를 눌러서 글을 작성할 수 있습니다. "/>
+
+            <ImageView
+                android:id="@+id/picView"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_gravity="center"
+                android:layout_margin="20dp" />
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
