--- a/app/src/main/res/layout/information_place.xml
+++ b/app/src/main/res/layout/information_place.xml
@@ -126,7 +126,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
                     android:paddingLeft="10sp"
-                    android:textSize="20dp" />
+                    android:text="type"
+                    android:textSize="18dp" />
 
             </LinearLayout>
 
@@ -148,6 +149,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10sp"
+                    android:text="price"
                     android:textSize="20dp" />
 
             </LinearLayout>
@@ -170,6 +172,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10sp"
+                    android:text="maxnum"
                     android:textSize="20dp" />
 
             </LinearLayout>
