--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dp"
-            android:text="실리콘밸리 출신 해외파 노마더 "
+            android:text="지금 뜨는 노마더 "
             android:textColor="#000000"
             android:textSize="20dp"
             android:textStyle="bold" />
